[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include=['knvheatpumplib']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project]
name = "knvheatpumplib"
authors = [
    {name = "LDprg", email = "lukas_4dr@gmx.at"},
]
description = "KNV heatpump Python library"
readme = "README.md"
license = {text = "GPL-3"}
dependencies = [
    "websockets",
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]