[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['knvheatpumplib']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]

[project]
name = "knvheatpumplib"
authors = [{ name = "LDprg", email = "lukas_4dr@gmx.at" }]
description = "KNV heatpump Python library"
license = { text = "GPL-3" }
readme = "README.md"
dependencies = [
    "logging",
    "async-timeout",
    "asyncio",
    "websockets",
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
#dynamic = ["version"]
version = "0.0.3"
