[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['knvheatpumplib']

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://github.com/LDprg/KNV_heatpump_lib"

[project]
name = "knvheatpumplib"
authors = [{ name = "LDprg", email = "lukas_4dr@gmx.at" }]
description = "KNV heatpump Python library"
license = { text = "GPL-3" }
readme = "README.md"
# dependencies = [
#     "logging",
#     "async-timeout",
#     "asyncio",
#     "websockets",
#     "requests",
#     'importlib-metadata; python_version<"3.8"',
# ]
dynamic = ["version"]
